# weather-observation-app

./: .gitignore  README.md
backend/: Makefile  README.md  conftest.py  pyproject.toml  pyrightconfig.json  samconfig.toml  template.yaml
backend/src/api/: app.py  requirements.txt
backend/src/api/repositories/: weather_repository.py
backend/src/api/routers/: weather.py
backend/src/api/tests/: test_app.py  test_repository.py  test_wards.py
backend/src/collector/: app.py  requirements.txt  scraper.py
backend/src/collector/tests/: conftest.py  test_scraper.py
backend/src/layers/common/python/: schemas.py  wards.py
exploration/: README.md  check_weathernews.py  explore_tables.py  parse_weather.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: ObservationsTable.tsx  StatCard.tsx  WardSelect.tsx
frontend/src/hooks/: useWeatherData.ts
frontend/src/utils/: formatDateTime.ts
